// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardSidebar > renders with class correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" class="border-none" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with collapsedSize correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="true" data-dragging="false" data-slot="root" style="--width: 10%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with collapsible correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with content slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with default slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class="">Default slot</div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with defaultSize correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 50%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with footer slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <div data-slot="footer" class="">Footer slot</div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with header slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <div data-slot="header" class="">Header slot</div>
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with id correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-test" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with maxSize correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with minSize correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with pohon correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class="py-4"></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with resizable correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <div role="separator" class="" aria-controls="dashboard-sidebar-v-0" data-slot="handle"></div>
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with resize-handle slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>Resize handle slot
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with side right correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with toggle correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!---->
  <!---->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders with toggle slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`DashboardSidebar > renders without toggle correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!---->
  <!---->
  <!--teleport end-->
</div>"
`;
